[package]
name = "hcbs_test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4.6"
nom = "8.0.0"
num_cpus = "1.16.0"
rand = "0.9.1"
scheduler = "0.1.3"
sysconf = "0.3.4"
sysinfo = "0.34.2"

[features]
cgroup_v2 = []

[[bin]]
name = "constraints_cgroup_setup"
path = "src/bin/constraints/cgroup_setup.rs"

[[bin]]
name = "fair_dl_server_realtime_bw_change"
path = "src/bin/fair_dl_server/realtime_bw_change.rs"
[[bin]]
name = "fair_dl_server_regression"
path = "src/bin/fair_dl_server/regression.rs"

[[bin]]
name = "stress_cgroup_make_destroy"
path = "src/bin/stress/cgroup_make_destroy.rs"
[[bin]]
name = "stress_change_pinning"
path = "src/bin/stress/change_pinning.rs"
[[bin]]
name = "stress_change_priority"
path = "src/bin/stress/change_priority.rs"
[[bin]]
name = "stress_run_all"
path = "src/bin/stress/run_all.rs"

[[bin]]
name = "time_many_tasks"
path = "src/bin/time/many_tasks.rs"
[[bin]]
name = "time_one_task"
path = "src/bin/time/one_task.rs"
[[bin]]
name = "time_pin_task"
path = "src/bin/time/pin_task.rs"
[[bin]]
name = "time_run_all"
path = "src/bin/time/run_all.rs"

[[bin]]
name = "tools_mount_cgroup_fs"
path = "src/bin/tools/mount_cgroup_fs.rs"
