[package]
name = "hcbs_test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.4.6"
libc = "0.2.173"
nom = "8.0.0"
num_cpus = "1.16.0"
rand = "0.9.1"
scheduler = "0.1.3"
sysconf = "0.3.4"
sysinfo = "0.34.2"
sched_deadline = { git = "https://github.com/stephan-cr/sched_deadline-rs" }

[features]
cgroup_v2 = []

[[bin]]
name = "regression"
path = "src/bin/regression/main.rs"

[[bin]]
name = "constraints_cgroup_setup"
path = "src/bin/constraints/cgroup_setup.rs"

[[bin]]
name = "stress"
path = "src/bin/stress/main.rs"

[[bin]]
name = "time"
path = "src/bin/time/main.rs"

[[bin]]
name = "taskset"
path = "src/bin/taskset/main.rs"

[[bin]]
name = "tools"
path = "src/bin/tools/main.rs"